# ORL-Digit-Robot-Codebase

./: CMakeLists.txt  README.md
Important Software Packages/agility-pysdk/agility/: __init__.py  jsonapi.py  monitors.py  simulator.py
Important Software Packages/agility-pysdk/agility-1.1.3.dist-info/: METADATA  RECORD
Important Software Packages/agility-pysdk/agility/messages/: json.py  messages.py
Main_Workspace/: Digit_OSC.cc  LLAPI_MUJOCO_Wrapper.h  P2R_OSC.cc  main.m
Main_Workspace/Archives/: CMakeLists_P2R.bak  P2R_OSC.cc  P2R_OSC_bak.cc  qp_test.cc
Main_Workspace/Data/: MJMODEL.TXT  digit-v3.xml  planar_2r.xml  planar_2r_old.xml  qp_data.csv
Main_Workspace/Data/Results/: OSC Ellipse Results 05-15-2023.fig  OSC Results 05-12-2023.fig  data.csv  data_digit.csv
Main_Workspace/Data/stl/: right-achilles-rod.stl  right-arm-L1.stl  right-arm-L2.stl  right-arm-L3.stl  right-arm-L4.stl  right-heel-spring.stl  right-hip-pitch-housing.stl  right-hip-pitch.stl  right-hip-roll-housing.stl  right-hip-yaw-housing.stl  right-knee.stl  right-shin.stl  right-shoulder-roll-housing.stl  right-tarsus.stl  right-toe-A-rod.stl  right-toe-B-rod.stl  right-toe-output.stl  right-toe-pitch.stl  right-toe-roll.stl  right-torso.stl
Main_Workspace/LLAPI/: Makefile  digit_sensor_data_reader.cc
include/: MUJOCO_LOG.TXT  P2R_OSC.cc  Quadratic_Programming_OSC.cc  file_manage.cc  lowlevelapi_example.c  main.m  planar_2r.xml  test.txt
include/Data/: OSC_QP no dynamic constraints.fig  OSC_QP_#1.fig  OSC_QP_1.fig  P2R_OSC_QP.cc.bak  data.csv  digit-v3.xml  sol.txt
